Improve code quality: add proper logging and fix deprecated API usage by nayjoplin
Co-authored-by: nayjoplin <72886862+nayjoplin@users.noreply.github.com>